--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
                     </span>
                     <br />
                     <span class="smaller"
-                      >for businesses, organizations, groups, communities, and
-                      more.</span
+                      >for businesses, organizations, agencies, professionals,
+                      institutions, communities, groups, associations, artists,
+                      and more.</span
                     >
                   </p>
                 </div>
@@ -149,8 +150,8 @@
                 </div>
                 <div class="info">
                   <p>
-                    You'll get a new website, a logo (if you want a new one),
-                    and online profiles to build your presence.
+                    You'll get a new website, a custom logo (if desired), and
+                    online profiles to build your presence.
                   </p>
                 </div>
               </div>
@@ -161,8 +162,8 @@
                 <div class="info">
                   <p>
                     All of this at a simple, predictable rate of $1000 per week,
-                    and most projects take about 2 weeks. (Probably $2000 in
-                    total.)
+                    with most projects typically taking about 2 weeks to
+                    complete.
                   </p>
                 </div>
               </div>
@@ -202,11 +203,11 @@
                 </div>
                 <div class="info">
                   <p>
-                    First, there's consulting: laying out the vision and
-                    devising a plan. Next, it's a matter of crafting
-                    architecture, modeling data structures, designing
-                    experiences, building interfaces, implementing features,
-                    developing functionality, and producing your app.
+                    We start with a consultation to outline your vision and
+                    devising a plan. Then we proceed to craft the app
+                    architecture, model data structures, design experiences,
+                    build interfaces, implement features, develop functionality,
+                    and ultimately produce your app.
                   </p>
                 </div>
               </div>
@@ -216,10 +217,8 @@
                 </div>
                 <div class="info">
                   <p>
-                    Rates in this category are dependent on the nature of the
-                    project (variable complexity), but a general ballpark range
-                    might be about $1400 per week for 4-8 weeks. (Maybe a total
-                    of ~$5000-$15000.)
+                    Rates vary depending on the project's complexity but
+                    generally range from around $1400 per week for 4-8 weeks.
                   </p>
                 </div>
               </div>
@@ -261,29 +260,33 @@
                       </p>
                     </blockquote>
                     <p>
-                      In the modern digital world, virtually every service
+                      In today's digital landscape, virtually every service
                       demands recurring subscription fees. But our niche is a
                       guarantee to get you zero recurring costs (or at least as
                       close as possible).
                     </p>
                     <p>
-                      For websites, your only recurring payment will be for your
-                      domain name, which you can usually pay for every ~9 years
-                      for cheap.
+                      For websites, your only recurring expense will be your
+                      domain name, typically renewable every ~9 years at a low
+                      cost.
                     </p>
                     <p>
-                      For apps, you'll only pay for excess database usage fees
-                      (and Apple's annual platform fees if you release to iOS).
+                      For apps, you'll only incur costs for excess database
+                      usage fees (and Apple's annual platform fees if you
+                      release to iOS).
                     </p>
                     <p>
-                      You'll just pay the upfront cost for the initial creation,
+                      You'll only pay the upfront cost for the initial creation,
                       and then your project should be free of charge from there
                       on out.
                     </p>
                     <p>
-                      This also means you own everything and always have
-                      complete control and administrative access, every step of
-                      the way.
+                      This means minimal ongoing costs, empowering you to manage
+                      your project independently.
+                    </p>
+                    <p>
+                      You'll own everything and always have complete control and
+                      administrative access, every step of the way.
                     </p>
                     <p>
                       Your time and money will be respected and protected. And
@@ -332,9 +335,7 @@
                 <span class="medium">connection brings people together</span>,
                 and <span class="medium">creation brings ideas to life</span>.
               </p>
-              <p>
-                I'm excited to connect with you and create something amazing!
-              </p>
+              <p>Let's connect and create something amazing!</p>
             </div>
           </div>
         </article>
@@ -343,8 +344,8 @@
             <h2 id="contact">Contact</h2>
           </div>
           <div class="ending">
-            <p>Reach out and send us a message!</p>
-            <p>You're going to love working with us.</p>
+            <p>Reach out and send a message!</p>
+            <p>Let's bring your ideas to life.</p>
             <p class="down-arrow">↓</p>
           </div>
         </div>
