update top content

--- a/index.html
+++ b/index.html
@@ -151,19 +151,9 @@
                 <div class="info">
                   <p>
                     You'll get a new website, a custom logo (if desired), and
-                    online profiles to build your presence.
-                  </p>
-                </div>
-              </div>
-              <div class="flex">
-                <div class="headline">
-                  <h4>What you pay</h4>
-                </div>
-                <div class="info">
-                  <p>
-                    All of this at a simple, predictable rate of $1000 per week,
-                    with most projects typically taking about 2 weeks to
-                    complete.
+                    online profiles to build your presence. Typically this
+                    includes social profiles and business profiles for platforms
+                    like Google and Yelp.
                   </p>
                 </div>
               </div>
@@ -208,17 +198,6 @@
                     architecture, model data structures, design experiences,
                     build interfaces, implement features, develop functionality,
                     and ultimately produce your app.
-                  </p>
-                </div>
-              </div>
-              <div class="flex">
-                <div class="headline">
-                  <h4>What you pay</h4>
-                </div>
-                <div class="info">
-                  <p>
-                    Rates vary depending on the project's complexity but
-                    generally range from around $1400 per week for 4-8 weeks.
                   </p>
                 </div>
               </div>
