--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="info">
                   <p>
                     We start with a consultation to outline your vision and
-                    devising a plan. Then we proceed to craft the app
+                    devise a plan. Then we proceed to craft the app
                     architecture, model data structures, design experiences,
                     build interfaces, implement features, develop functionality,
                     and ultimately produce your app.
